changes to data.ejs and deletions of unnecessary files

--- a/DTN_app/views/get_data.ejs
+++ b/DTN_app/views/get_data.ejs
@@ -23,26 +23,11 @@
         </div>
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>@Email</th>
-                        <th>Gender</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_altitude_sensor')%>
                 </thead>
                 <tbody class="thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                         <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_altitude_sensor')%>
                 </tbody>
-
             </table>
         </form>
         </div>
@@ -53,24 +38,10 @@
         <form action="/" method = "POST">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>@Email</th>
-                    <th>Gender</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_humidity_sensor')%>
                 </thead>
                 <tbody class="thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_humidity_sensor')%>
                 </tbody>
             </table>
         </form>
@@ -82,24 +53,10 @@
         <form action="/" method = "POST">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>@Email</th>
-                    <th>Gender</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_pressure_sensor')%>
                 </thead>
                 <tbody class="thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_pressure_sensor')%>
                 </tbody>
             </table>
         </form>
@@ -111,24 +68,10 @@
         <form action="/" method = "POST">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>@Email</th>
-                    <th>Gender</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_rain_sensor')%>
                 </thead>
                 <tbody class="thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_rain_sensor')%>
                 </tbody>
             </table>
         </form>
@@ -140,24 +83,10 @@
         <form action="/" method = "">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>@Email</th>
-                    <th>Gender</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_temperature_sensor')%>
                 </thead>
                 <tbody class="thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_temperature_sensor')%>
                 </tbody>
             </table>
         </form>
@@ -169,24 +98,10 @@
         <form action="/" method = "POST">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>@Email</th>
-                    <th>Gender</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                    </tr>
+                    <%- include('include/_form/_uv_sensor')%>
                 </thead>
                 <tbody class=" thead-dark border-shadow">
-                    <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                    </tr>
+                    <%- include('include/_show/_uv_sensor')%>
                 </tbody>
             </table>
         </form>
