--- a/DTN_app/views/include/_show/_pressure_sensor.ejs
+++ b/DTN_app/views/include/_show/_pressure_sensor.ejs
@@ -1,9 +1,8 @@
-<% for(var i = 0; i<users.length; i++){%>
+<% for(var i = 0; i<data.length; i++){%>
 <tr>
     <td><%= i+1%></td>
-    <td><%= data[i].name%></td>
-    <td><%= data[i].email%></td>
-    <td><%= data[i].gender%></td>
-    <td><%= data[i].status%></td>
+    <td><%= data[i].Time%></td>
+    <td><%= data[i].Date%></td>
+    <td><%= data[i].Pressure%></td>
 </tr>
 <%}%>
