--- a/DTN_app/views/include/_form/_humidity_sensor.ejs
+++ b/DTN_app/views/include/_form/_humidity_sensor.ejs
@@ -1,10 +1,7 @@
 <!--Form Handling-->
 <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>@Email</th>
-    <th>Gender</th>
-    <th>Status</th>
-    <th>Action</th>
+    <th>Time</th>
+    <th>Date</th>
+    <th>Humidity</th>
 </tr>
 <!--Form Handling-->
