--- a/DTN_app/views/include/_show/_altitude_sensor.ejs
+++ b/DTN_app/views/include/_show/_altitude_sensor.ejs
@@ -1,8 +1,8 @@
-<% for(var i = 0; i<data.length; i++){%>
+<% for(var i = 0; i<AltitudeSensor.length; i++){%>
     <tr>
         <td><%= i+1%></td>
-        <td><%= data[i].Time%></td>
-        <td><%= data[i].Date%></td>
-        <td><%= data[i].Altitude%></td>
+        <td><%= AltitudeSensor[i].Time%></td>
+        <td><%= AltitudeSensor[i].Date%></td>
+        <td><%= AltitudeSensor[i].Altitude%></td>
     </tr>
     <%}%>
