--- a/DTN_app/views/include/_show/_humidity_sensor.ejs
+++ b/DTN_app/views/include/_show/_humidity_sensor.ejs
@@ -1,8 +1,8 @@
-<% for(var i = 0; i<data.length; i++){%>
+<% for(var i = 0; i<HumiditySensor.length; i++){%>
     <tr>
         <td><%= i+1%></td>
-        <td><%= data[i].Time%></td>
-        <td><%= data[i].Date%></td>
-        <td><%= data[i].Humidity%></td>
+        <td><%= HumiditySensor[i].Time%></td>
+        <td><%= HumiditySensor[i].Date%></td>
+        <td><%= HumiditySensor[i].Humidity%></td>
     </tr>
     <%}%>
