--- a/DTN_app/views/include/_show/_pressure_sensor.ejs
+++ b/DTN_app/views/include/_show/_pressure_sensor.ejs
@@ -1,8 +1,8 @@
-<% for(var i = 0; i<data.length; i++){%>
+<% for(var i = 0; i<PressureSensor.length; i++){%>
 <tr>
     <td><%= i+1%></td>
-    <td><%= data[i].Time%></td>
-    <td><%= data[i].Date%></td>
-    <td><%= data[i].Pressure%></td>
+    <td><%= PressureSensor[i].Time%></td>
+    <td><%= PressureSensor[i].Date%></td>
+    <td><%= PressureSensor[i].Pressure%></td>
 </tr>
 <%}%>
