--- a/DTN_app/views/include/_show/_uv_sensor.ejs
+++ b/DTN_app/views/include/_show/_uv_sensor.ejs
@@ -1,8 +1,7 @@
-<% for(var i = 0; i<data.length; i++){%>
+<% for(var i = 0; i<UVSensor.length; i++){%>
     <tr>
         <td><%= i+1%></td>
-        <td><%= data[i].Time%></td>
-        <td><%= data[i].Date%></td>
-        <td><%= data[i].UV Sensor Data%></td>
+        <td><%= UVSensor[i].Time%></td>
+        <td><%= UVSensor[i].Date%></td>
     </tr>
     <%}%>
