--- a/DTN_app/views/index.ejs
+++ b/DTN_app/views/index.ejs
@@ -7,11 +7,11 @@
     <div class = "container">
         <div class="form-title text-center">
             <h2 class = "text-dark">Welcome to The User Dashboard!</h2>
-            <h3 class ="text-light">Please click the button bellow to request data</h3  >
+            <h3 class ="text-light">Please click the button below to request data</h3  >
         </div>
         <div class="form-group text-center" id = "btn">
             <a href="/get-data">
-                <span class = "btn text-dark">Make a Request<i class="fa-solid fa-arrow-up" id = "icon"></i></span>
+                <span class = "btn text-dark">Make a Request <i class="fa-solid fa-arrow-up" id = "icon"></i></span>
             </a>              
         </div>
     </div>
