--- a/DTN_app/views/get_data.html
+++ b/DTN_app/views/get_data.html
@@ -49,9 +49,24 @@
                 </thead>
                 <tbody class="thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:22.172265-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>523.30m</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:22.348355-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>523.70m</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:22.505224-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>523.48m</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:22.665989-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>523.30m</td>
                     </tr>
                 </tbody>
 
@@ -73,9 +88,24 @@
                 </thead>
                 <tbody class="thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:21.436803-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>52.47%</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:21.591245-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>52.40%</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:21.747427-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>52.24%</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:21.916696-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>52.20%</td>
                     </tr>
                 </tbody>
             </table>
@@ -96,9 +126,24 @@
                 </thead>
                 <tbody class="thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:20.707030-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>951.95hPa</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:20.891477-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>951.91hPa</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:21.044727-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>951.93hPa</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:21.198560-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>951.90hPa</td>
                     </tr>
                 </tbody>
             </table>
@@ -120,10 +165,28 @@
                 </thead>
                 <tbody class="thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:13.956031-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>1023</td>
+                        <td>No Rain</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:14.134251-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>1023</td>
+                        <td>No Rain</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:14.449074-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>1023</td>
+                        <td>No Rain</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:14.646458-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>1023</td>
+                        <td>No Rain</td>
                     </tr>
                 </tbody>
             </table>
@@ -139,14 +202,29 @@
                     <tr>
                     <th>Time</th>
                     <th>Date</th>
-                    <th>Temperature</th>
+                    <th>Temperature (C°)</th>
                     </tr>
                 </thead>
                 <tbody class="thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:19.887515-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>26.06</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:20.073336-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>26.15</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:20.279760-05:00</td>
+                        <td>t2022-11-23</td>
+                        <td>26.16</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:20.483226-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>26.18</td>
                     </tr>
                 </tbody>
             </table>
@@ -167,9 +245,24 @@
                 </thead>
                 <tbody class=" thead-dark border-shadow">
                     <tr>
-                        <td>test</td>
-                        <td>test</td>
-                        <td>test</td>
+                        <td>01:40:10.839425-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>-0.03</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:11.850429-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>-0.03</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:12.003265-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>0.04</td>
+                    </tr>
+                    <tr>
+                        <td>01:40:12.393153-05:00</td>
+                        <td>2022-11-23</td>
+                        <td>1.89</td>
                     </tr>
                 </tbody>
             </table>
